--- a/an-mda-report.html
+++ b/an-mda-report.html
@@ -847,8 +847,8 @@
     return { rows, dimensionsToQuery };
   }
 
-  function buildHtmlTable(rows, columns) {
-    // Should these really be here?
+  function buildHtmlTable(rows, columns) { // Should parameters these really be here?
+    console.log("I'm in the new html table build!");
     // Remove "loading"
     $("#loading").remove();
 
@@ -883,6 +883,51 @@
         0
       );
     const tbody = $("#tbody");
+
+    // Set up table body
+    rows.forEach((row) => {
+      // Make new row element
+      const newRow = $(
+        `<tr data-name="${row.name}" data-type="${row.type}"></tr>`
+      );
+      // Add new row to DOM
+      tbody.append(newRow);
+
+      if (row.type === rowTypes.CATEGORY) {
+        // Row is just a category label (like "Coverage Evaluation"): make one wide cell and return
+        newRow.append(
+          `<th scope="row" colspan="${totalColumns}">${row.name}</th>`
+        );
+        return;
+      }
+
+      // Add row header with name
+      newRow.append(`<th scope="row">${row.name}</th>`);
+
+      if (!row.cells) {
+        newRow.append(
+          `<td colspan="${totalColumns - 1}">No dimensions specified</td>`
+        );
+        return;
+      }
+
+      // Set up data cells with `id` to be populated by analytics query
+      row.cells.forEach((cell) => {
+        // If cell is empty, make empty cell element
+        if (!cell) return newRow.append(`<td></td>`);
+
+        const { dId: dimensionId, value } = cell;
+
+        if (value) {
+          // Hardcoded value or dimension not found. Add cell with content:
+          newRow.append(`<td>${value}</td>`);
+          return;
+        }
+
+        // Otherwise make cell and give it a id to target to be populated with data
+        newRow.append(`<td data-dimension-id=${dimensionId}>Loading...</td>`);
+      });
+    });
   }
 
   jQuery(document).ready(function () {
@@ -890,181 +935,17 @@
 
     // Parallel promises to fetch indicators and programIndicators
     getAllDimensions().then((allDimensions) => {
-      // const { rows, dimensionsToQuery } = populateDimensionIds(rows, allDimensions);
-      // console.log(res);
+      const { rows: rows2 , dimensionsToQuery } = populateDimensionIds(rows, allDimensions);
 
-      // Remove "loading"
-      $("#loading").remove();
+      buildHtmlTable(rows2, columns); // TODO: args, lol
 
-      // Set up column headers and subheaders
-      $("#header-row-top").append(`<th scope="col"></th>`);
-      $("#header-row-bottom").append(`<th scope="col"></th>`);
-      columns.forEach((col) => {
-        if (col.subcategories) {
-          // 1. Make the top row th colspan = col.subcategories.length
-          $("#header-row-top").append(
-            `<th scope="col" colspan="${col.subcategories.length}">${col.name}</th>`
-          );
-          // 2. Make a bottom row th for each subcategory
-          col.subcategories.forEach((subcat) => {
-            $("#header-row-bottom").append(
-              `<th scope="col">${subcat.shortName}</th>`
-            );
-          });
-          return;
-        }
-        // Else, th with col name on top header row, empty cell on bottom
-        $("#header-row-top").append(`<th scope=col>${col.shortName}</th>`);
-        $("#header-row-bottom").append(`<th scope="col"></th>`);
-      });
-
-      // Set up table body to be populated
-      const totalColumns =
-        1 +
-        columns.reduce(
-          (sum, column) =>
-            sum + (column.subcategories ? column.subcategories.length : 1),
-          0
-        );
-      const dimensionsToQuery = [];
-      const tbody = $("#tbody");
-
-      // Set up table body
-      rows.forEach((row) => {
-        // Make new row object
-        const newRow = $(
-          `<tr data-name="${row.name}" data-type="${row.type}"></tr>`
-        );
-        // Add new row to DOM
-        tbody.append(newRow);
-
-        if (row.type === rowTypes.CATEGORY) {
-          // Row is just a category label (like "Coverage Evaluation"): make one wide cell and return
-          newRow.append(
-            `<th scope="row" colspan="${totalColumns}">${row.name}</th>`
-          );
-          return;
-        }
-
-        // Add row header with name
-        newRow.append(`<th scope="row">${row.name}</th>`);
-
-        // Handling manually-defined dimension names
-        if (row.cells) {
-          // TODO: Refactor into `populateManuallyDefinedRow(row, newRow)`;
-          // Cells are manually defined. Iterate over dimension definitions to make row
-          row.cells.forEach((cell) => {
-            // If dimension name is empty, make empty cell
-            if (!cell) return newRow.append(`<td></td>`);
-
-            const { dn: dimensionName } = cell;
-
-            // Look up dimension ID from `allDimensions`
-            const dimension = allDimensions.find(
-              (dim) => dim.displayName === dimensionName
-            );
-
-            if (!dimension) {
-              // Dimension not found. Add cell saying so:
-              newRow.append(
-                `<td>(dimension not found: "${dimensionName}")</td>`
-              );
-              return;
-            }
-
-            // Dimension found. Make cell; give it a target to be filled with data
-            newRow.append(
-              `<td data-dimension-id=${dimension.id}>Loading...</td>`
-            );
-            // Add dimension to list to query
-            dimensionsToQuery.push(dimension.id);
-          });
-          return;
-        } // End manually-defined row
-
-        // Cells are not manually defined; create them based on column definiitions
-        columns.forEach((col) => {
-          // 1. Check if column has subcategories
-          if (col.subcategories) {
-            // Subcategory strategy:
-            // A. Check for aggregate dimension (without suffix)
-            // If present, add empty cells for "rounds" and a cell with data in "total"; return
-            const dimensionName = `${col.prefix} - ${row.name}`; // e.g. "TMDA - Endemic IUs"
-            const dimension = allDimensions.find(
-              (dim) => dim.displayName === dimensionName
-            );
-            if (dimension) {
-              col.subcategories.forEach((subcategory) => {
-                // Empty cells if not in "Total" column
-                if (subcategory !== colSubcats.TOTAL) {
-                  newRow.append("<td></td>");
-                  return;
-                }
-                // Data for "total" column
-                newRow.append(
-                  `<td data-dimension-id=${dimension.id}>Loading...</td>`
-                );
-                // Add dimension to list to query
-                dimensionsToQuery.push(dimension.id);
-              });
-              return;
-            }
-
-            // B. Check for subcategory dimension
-            // If present, add filled cells for each subcat
-            col.subcategories.forEach((subcategory) => {
-              const subcatDimensionName = `${dimensionName} ${subcategory}`; // e.g. "OMDA - Population in NTD affected IUs Round 2"
-
-              const subcatDimension = allDimensions.find(
-                (dim) => dim.displayName === subcatDimensionName
-              );
-
-              if (subcatDimension) {
-                // Dimension found: make new cell and return
-                const dimensionId = subcatDimension.id;
-                // Make cell; give it a target to be filled with data
-                newRow.append(
-                  `<td data-dimension-id=${dimensionId}>Loading...</td>`
-                );
-                // Add dimension to list to query
-                dimensionsToQuery.push(dimensionId);
-                return;
-              }
-
-              // Dimension not found; add cell with message
-              newRow.append(
-                `<td>(dimension not found: "${subcatDimensionName}")</td>`
-              );
-            });
-            return; // Done with subcategories
-          }
-
-          // 2. If no subcategories, look for data for cell (use row name & col prefix)
-          const dimensionName = `${col.prefix} - ${row.name}`; // e.g. "TCMDA - Endemic IUs"
-          const re = new RegExp(dimensionName, "i");
-
-          const dimension = allDimensions.find((dim) => {
-            // Regex matching to be more flexible (case insensitive, works w/o spaces)
-            return re.test(dim.displayName);
-          });
-
-          // If dimension found, make new cell and prep it for data
-          if (dimension) {
-            // Make cell; give it a target to be filled with data
-            newRow.append(
-              `<td data-dimension-id=${dimension.id}>Loading...</td>`
-            );
-            // Add dimension to list to query
-            dimensionsToQuery.push(dimension.id);
-            return;
-          }
-
-          // If dimension not found, add cell saying so:
-          newRow.append(`<td>(dimension not found: "${dimensionName}")</td>`);
-
-          // TODO: Maybe, if data is not found, check /api/programIndicators with case insensitivity to see if field exists
-        }); // End automated population
-      }); // End table body row population
+      // TODO from here:
+      // 1. Get analytics data
+      // 2. Populate `value` property of each cell (maybe by $(id), because iterating over rows will leave some cells that don't have data in the db empty)
+        // Then again, this can be tested for with (dimensionName && !analyticsResult) => "-"
+      // 3. Execute custom logic
+      // 4. Add values to html table
+        // How do I get custom logic in there? Do I mark a custom logic cell with id="row(Idx) col(Idx)" to hit it with a selector?  Maybe id each cell this way?
 
       // TODO: Refactor into `getAnalyticsData(dimensionsToQuery, period, orgUnit)`
       // API call to fetch analytics data
@@ -1077,6 +958,11 @@
         },
         (json) => {
           // console.log("Analytics results: ", json.rows);
+
+          // convert to a map for easy lookup by ID:
+          const keyValuePairs = json.rows.map((row) => [row[0], row[2]]);
+          const resultsMap = new Map(keyValuePairs);
+          console.log(resultsMap);
 
           // Fill cells that returned data; put "-" in ones that didn't
           dimensionsToQuery.forEach((dim) => {
